feat: support Chemical Markup Language, CML, for reading
Implement RDKit::MolFromCMLBlock and RDKit::MolFromCMLFile
http://www.xml-cml.org/

--- a/Code/GraphMol/FileParsers/CMakeLists.txt
+++ b/Code/GraphMol/FileParsers/CMakeLists.txt
@@ -40,6 +40,7 @@ rdkit_library(FileParsers
     TplFileParser.cpp TplFileWriter.cpp
     PDBParser.cpp PDBWriter.cpp
     CMLWriter.cpp XYZFileWriter.cpp XYZFileParser.cpp
+    #CMLReader.cpp
     ${maesupplier}
     ProximityBonds.cpp
     SequenceParsers.cpp SequenceWriters.cpp
