--- a/.github/workflows/clang-format.yaml
+++ b/.github/workflows/clang-format.yaml
@@ -10,8 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: run clang-format
         run: |
-          git remote add origin https://github.com/rdkit/rdkit.git
-          git fetch origin master
+          #git fetch origin master
           git diff --name-only origin/master |
             grep -E '\.(c|cc|cpp|cxx|h|hpp)\b' |
             xargs -r clang-format -i
