feat: implement Chemical JSON Writer

--- a/Code/GraphMol/FileParsers/CMakeLists.txt
+++ b/Code/GraphMol/FileParsers/CMakeLists.txt
@@ -28,6 +28,7 @@ endif()
 
 rdkit_library(FileParsers
     CDXMLParser.cpp
+    CJSONWriter.cpp
     Mol2FileParser.cpp MolFileParser.cpp
     SCSRMolFileParser.cpp
     MolSGroupParsing.cpp MolSGroupWriting.cpp
